--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-@@ -1 +1,96 @@
-<html><head></head><body>are we going to zibo today</body></html>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -46,7 +44,6 @@
   login.addEventListener('click', () => {
     let value = loginName.value;
     if (value) {
-      loginName.value = ''
       loginW.style.display = 'none'
       sendW.style.display = 'block'
       webSocketFn()
@@ -56,12 +53,14 @@
   function webSocketFn () {
     const socket = new WebSocket("ws://localhost:12010/");
     socket.onopen = function () {
-      div.innerHTML = '连接成功';
+      div.innerHTML = '登录成功';
+      socket.send(JSON.stringify({ name: loginName.value, text: '', type: 0 }));
+      loginName.value = ''
     }
     button.addEventListener('click', () => {
       let value = input.value;
       if (value) {
-        socket.send(value);
+        socket.send(JSON.stringify({ name: '', text: value, type: 1 }));
         input.value = ''
       }
     });
